apps/platform/llm/base/namespace.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: platform-llm
  labels:
    platform.jaccloud.nl/tenant: platform
