apps/platform/llm/base/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: llm
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8000
      targetPort: 8000
      protocol: TCP
  selector:
    app.kubernetes.io/name: llm
